<?xml version="1.0"?>
<package format="3">
    <name>arm_teleop</name>
    <version>0.0.1</version>
    <description>ArUco marker arm teleoperation</description>
    <maintainer email="zichen1804@gmail.com">you</maintainer>
    <license>MIT</license>
    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>robot_state_publisher</depend>
    <depend>rviz2</depend>
    <export>
        <build_type>ament_python</build_type>
    </export>
</package>